# ChangeLog for sys-apps/busybox
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.84 2006/03/28 02:39:58 vapier Exp $

*busybox-1.1.1 (28 Mar 2006)

  28 Mar 2006; Mike Frysinger <vapier@gentoo.org> +files/1.1.1/bb.patch,
  +busybox-1.1.1.ebuild:
  Version bump #127420 by Natanael Copa.

  28 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> busybox-1.1.0.ebuild:
  Stable on sparc wrt #127377

  27 Mar 2006; Markus Rothe <corsair@gentoo.org> busybox-1.1.0.ebuild:
  Stable on ppc64

  25 Mar 2006; Bryan Østergaard <kloeri@gentoo.org busybox-1.1.0.ebuild:
  Stable on alpha, bug 127377.

  25 Mar 2006; Torsten Veller <tove@gentoo.org> busybox-1.1.0.ebuild:
  Stable on x86 (#127377)

  25 Mar 2006; Joseph Jezak <josejx@gentoo.org> busybox-1.1.0.ebuild:
  Marked ppc stable for bug #127377.

  25 Mar 2006; Luis Medinas <metalgod@gentoo.org> busybox-1.1.0.ebuild:
  Stable on amd64. See bug #127377.

  10 Mar 2006; Mike Frysinger <vapier@gentoo.org> +files/1.1.0/glibc.patch,
  busybox-1.1.0.ebuild:
  Fix building with glibc-2.4 and newer.

  18 Feb 2006; Mike Frysinger <vapier@gentoo.org>
  +files/1.1.0/ppc64-insmod.patch, busybox-1.1.0.ebuild:
  Fix building on ppc64 #122992 Markus Rothe.

  08 Feb 2006; Aron Griffis <agriffis@gentoo.org> busybox-1.01.ebuild:
  Mark 1.01 stable on alpha

*busybox-1.1.0 (01 Feb 2006)

  01 Feb 2006; Mike Frysinger <vapier@gentoo.org> +busybox-1.1.0.ebuild:
  Version bump.

*busybox-1.01 (18 Aug 2005)

  18 Aug 2005; Mike Frysinger <vapier@gentoo.org> +busybox-1.01.ebuild:
  Version bump.

*busybox-1.1_pre20050802 (03 Aug 2005)

  03 Aug 2005; Mike Frysinger <vapier@gentoo.org>
  +busybox-1.1_pre20050802.ebuild:
  Add snapshot for #99849.

  11 Jun 2005; <solar@gentoo.org> busybox-1.00-r4.ebuild:
  - ifup/ifdown need run-parts. #95190

  04 Jun 2005; Mike Frysinger <vapier@gentoo.org> busybox-1.00-r4.ebuild: