@@ -1,21 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 253b9314b5245a48c3edc83b78cb4ecf ChangeLog 14965
-RMD160 3e831f15de2a46fcd4b7a5bb4045b5301c2573f6 ChangeLog 14965
-SHA256 d3b9490e0568be121fea9cdeac81ee1b4048bf3e4a39636294fee7a4ff409af2 ChangeLog 14965
+MD5 6d9b092f07643a8b092eb330c5a66e75 ChangeLog 15109
+RMD160 254c18cb4b640b9a3fb800f1c814a0922478f9d2 ChangeLog 15109
+SHA256 2e99af44aeb2a240b3a6b224b759feb9d9423a224a918a1162533a36516f256e ChangeLog 15109
 MD5 ef371aabe6da10b27577d6b87f35df44 busybox-1.00-r4.ebuild 7100
 RMD160 450e11502218ffc5b667cc2390437f5f1fa07e3b busybox-1.00-r4.ebuild 7100
 SHA256 b18b6474046e4ac82ed7d09379e4a4e399e1a8d9a5d489fc6767866b90086185 busybox-1.00-r4.ebuild 7100
 MD5 b0336ac088a950a2da4f6466bc199b02 busybox-1.01.ebuild 6933
 RMD160 312c03f049ba105482851f0708c6d8aee649c205 busybox-1.01.ebuild 6933
 SHA256 33833d698e1eb0c94aa02d2cd995b5f62d3df51aa7fff0d1ded4110e46a91239 busybox-1.01.ebuild 6933
-MD5 30ecaf2d5329c52963956d900816e5d7 busybox-1.1.0.ebuild 6677
-RMD160 c40ce0d88b6f011458eb01c59dfa9f9f52c331f9 busybox-1.1.0.ebuild 6677
-SHA256 58d33560e7dd3d3be0ff6b5e81791e86336419dd7fac650ee79807f86f63bdc0 busybox-1.1.0.ebuild 6677
-MD5 2adf1073675f0b6644323313f6845853 busybox-1.1.1.ebuild 6407
-RMD160 b251ec840311ba3a43c68e6e068189b746e866e6 busybox-1.1.1.ebuild 6407
-SHA256 d7bd057f47736513fa5a2b16b2b5abfd9b5ac59f63011892b946d7f381c565e2 busybox-1.1.1.ebuild 6407
+MD5 32fb5ba2b19ef384a2d4bfd7264bb149 busybox-1.1.0.ebuild 6716
+RMD160 5edaa61f5207d99a4692b1785c53ff672ac1f292 busybox-1.1.0.ebuild 6716
+SHA256 9a3685c26f5e43ef73be3dd293320ca6977b90dea00b9a8d9bb06d14374ac4ff busybox-1.1.0.ebuild 6716
+MD5 933bc85b049fd3250eb562f4b5785fd7 busybox-1.1.1.ebuild 6446
+RMD160 65780ceefa6b18f13ea04d8290932eeb0c8b325d busybox-1.1.1.ebuild 6446
+SHA256 6ee54dec05d41fb1e8e5cef2b3a5e403833776fbffa98e0e6c4ab5f447f487ab busybox-1.1.1.ebuild 6446
 MD5 81f4a0289354f964e744acb2f74c1894 files/1.00/bash-tests.patch 1474
 RMD160 01c16591ff5d5b339a605a4372c6e431270862ed files/1.00/bash-tests.patch 1474
 SHA256 091f9aa2a5294cf9659ffaa2c6f995e9af2d0cdc2388ecab3620d06fd4ac4cb2 files/1.00/bash-tests.patch 1474
@@ -85,7 +85,7 @@ SHA256 a11fdd02015a232398fdf22a20d26a95fc34d44c54513e6b26b6128d0b76122e metadata
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD8DBQFEKKJZ2+ySkm8kpY0RAvTVAJ4mrnCpYpzGpxS2lY9tDEsTRqBWegCeNDTJ
-HslVrsc/CFPwOd07M65/E9s=
-=ewwX
+iD8DBQFEKKQT2+ySkm8kpY0RAtlcAJ9LsoheWYSz7iev41df5jSVCqKPigCdFBCV
+dNxjBQ18YwytCZne9K4YLkw=
+=opgY
 -----END PGP SIGNATURE-----
